--- a/categories.html
+++ b/categories.html
@@ -7,10 +7,11 @@ title: Categories
 <h2 id="category-title">Categories: All</h2>
 <ul id="category-posts">
   {% for post in site.posts %}
-    {% assign category = post.categories[0] %}
-    <li class="category-post" data-category="{{ category }}">
-      <a href="{{ post.url }}">{{ post.title }}</a>
-    </li>
+    {% for category in post.categories %}
+      <li class="category-post" data-category="{{ category }}">
+        <a href="{{ post.url }}">{{ post.title }}</a>
+      </li>
+    {% endfor %}
   {% endfor %}
 </ul>
 <script>
