--- a/categories.html
+++ b/categories.html
@@ -9,7 +9,7 @@ title: Categories
   {% for post in site.posts %}
     {% for category in post.categories %}
       <li class="category-post" data-category="{{ category }}">
-        <a href="{{ post.url }}">{{ post.title }}</a>
+        <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a>
       </li>
     {% endfor %}
   {% endfor %}
